[package]
name = "Cryptocat"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
log = "0.4.26"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.36.0"
chrono = "0.4.39"
futures-util = "0.3.31"

[[bin]]
name = "Cryptocat"
path = "main.rs"
